# PSec

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  KPS.key  KPS.pem  KPS.srl  LICENSE  Makefile  PerformanceMetricParser.py  PerformanceMetricsCache.txt  README.md  cmake_install.cmake  compile_commands.json  dstHost.csr  dstHost2.crt  dstHost2.csr  dstHost2.key  mycert.pem
ExampleEnclaveInC/src/app/: CMakeLists.txt  Makefile  app.c  cmake_install.cmake
ExampleEnclaveInC/src/app/sgx_utils/: sgx_utils.c
ExampleEnclaveOTPServerSecureMessaging/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  compile_commands.json
ExampleEnclaveOTPServerSecureMessaging/PGenerated/: ForeignTypesImpl.c  libPrt_static.a OLD
ExampleEnclaveOTPServerSecureMessaging/cmake/: ConfigSGX.cmake  Init.cmake
ExampleEnclaveOTPServerSecureMessaging/src/: CMakeLists.txt  Makefile  cmake_install.cmake
ExampleEnclaveOTPServerSecureMessaging/src/EnclaveUtility/: Utility_Enclave.cpp  Utility_Enclave.h
ExampleEnclaveOTPServerSecureMessaging/src/LocalAttestationCode/: CMakeCache.txt  CMakeLists.txt  EnclaveMessageExchange.c  EnclaveMessageExchange.h  LocalAttestationCode.edl  LocalAttestationCode_t.c  LocalAttestationCode_t.h  Makefile  Utility_E1.h  cmake_install.cmake
ExampleEnclaveOTPServerSecureMessaging/src/PHeaders/: PrtLinuxUserConfig.h
ExampleEnclaveOTPServerSecureMessaging/src/TrustedMessaging/: TrustedMessagingLib.cpp
ExampleEnclaveOTPServerSecureMessaging/src/Untrusted_LocalAttestation/: UntrustedEnclaveMessageExchange.cpp
ExampleEnclaveOTPServerSecureMessaging/src/app/: CMakeLists.txt  ForeignTypesImpl.c  ForeignTypesImpl.cpp  Makefile  OTPServer.c  OTPServer.h  OTPServer.p  UntrustedMessaging.c  UntrustedMessaging.cpp  app.c  app.cpp  cmake_install.cmake  enclave2_u.c  enclave2_u.h  enclave_u.c  enclave_u.h
ExampleEnclaveOTPServerSecureMessaging/src/enclave/: CMakeLists.txt  EnclaveMessageExchange.c  EnclaveMessageExchange.h  Makefile  Utility_E1.cpp  cmake_install.cmake  enclave.cpp  enclave.edl  enclave_t.c  enclave_t.h
ExampleEnclaveOTPServerSecureMessaging/src/enclave2/: CMakeLists.txt  Makefile  TrustedMessaging.cpp  Utility_E1.cpp  Utility_E1.h  cmake_install.cmake  enclave2.cpp  enclave2.edl  enclave2_t.c  enclave2_t.h
ExampleEnclaveOTPServerSecureMessaging/src/shared/: TrustedMessaging.cpp  TrustedMessaging2.cpp  TrustedMessagingLib.cpp
HelperScripts/: CMakeLists.txt  ConfigSGX.cmake  FindSGXSDK.cmake
Samples/PSecureV1/: CMakeLists.txt  Makefile  cmake_install.cmake  kpsOutput.txt
Samples/PSecureV1/PGenerated/: CivitasHeaders.c  CivitasHeaders.h  EmailProcessingClient.c  EmailProcessingClient.h  HealthAnalysisClient.c  HealthAnalysisClient.h  OTPBankServerCode.c  OTPBankServerCode.h  OTPSampleCode.c  OTPSampleCode.h  PerformanceMachines1.c  PerformanceMachines1.h  PingPong.c  PingPong.h  PingPongEnclave.c  PingPongEnclave.h
Samples/PSecureV1/PSrc/: CivitasInitializerMachine.p  OTPClientCode.p  OTPSampleCode.p  PSecInternalLib.p  PingPong.p  PingPongEnclave.p  PingPongEnclaveOld.p
Samples/PSecureV1/PSrc/Civitas/: CivitasHeaders.p  Headers.p  InitializerMachine.p  SecureBallotBoxMachine.p  SecureBulletinBoard.p  SecureSupervisor.p  SecureTabulationTellerMachine.p  SecureTamperEvidentLog.p  SecureVotingClientMachine.p  VotingMachine.p
Samples/PSecureV1/PSrc/Civitas-PBaseline/: CivitasHeaders.p  SecureBallotBoxMachine.p  SecureBulletinBoard.p  SecureSupervisor.p  SecureTabulationTellerMachine.p  SecureTamperEvidentLog.p  SecureVotingClientMachine.p  VotingMachine.p
Samples/PSecureV1/PSrc/EmailProcessing/: EmailProcessingClient.p  EmailProcessingHeaderDeclarations.p  EmailProcessingServer.p
Samples/PSecureV1/PSrc/HealthAnalysis/: HealthAnalysisClient.p  HealthAnalysisHeaderDeclarations.p  HealthAnalysisServer.p
Samples/PSecureV1/PSrc/OTPExample/: OTPBankServerCode.p  OTPClientCode.p  OTPHeaderDeclarations.p
Samples/PSecureV1/PSrc/OTPExample-PBaseline/: OTPBankServerCode.p  OTPClientCode.p  OTPHeaderDeclarations.p
Samples/PSecureV1/PSrc/PerformanceMetricsExample/: PerformanceHeaderDeclarations.p  PerformanceMachines1.p  PerformanceMachines2.p
Samples/PSecureV1/Src/PHeaders/: PrtExecution.h  PrtProgram.h  PrtTypes.h  PrtValues.h
Samples/PSecureV1/Src/app/: CMakeLists.txt  Makefile  app.cpp  app.h  cmake_install.cmake  enclave2_u.c  enclave2_u.h  enclave2_untrusted_host.cpp  enclave2_untrusted_host.h  enclave3_u.c  enclave3_u.h  enclave3_untrusted_host.cpp  enclave3_untrusted_host.h  enclave_u.c  enclave_u.h  enclave_untrusted_host.cpp  enclave_untrusted_host.h  kps.cpp  kps.h  network_simulator.cpp  network_simulator.h  ping_attestation.cpp  ping_attestation.h  pong_enclave_attestation.cpp  pong_enclave_attestation.h  sample_libcrypto.h
Samples/PSecureV1/Src/enclave/: CMakeLists.txt  Makefile  cmake_install.cmake  enclave.config.xml  enclave.cpp  enclave.edl  enclave.h  enclave_internal_attestation.cpp  pong_enclave_internal_attestation.cpp  temp.c
Samples/PSecureV1/Src/enclave2/: CMakeLists.txt  enclave.cpp  enclave.h  enclave2.edl  enclave_internal_attestation.cpp
Samples/PSecureV1/Src/enclave3/: CMakeLists.txt  enclave.cpp  enclave.h  enclave3.edl  enclave_internal_attestation.cpp  temp.c  temp.h
Samples/PSecureV1/Src/shared/: constants.h  helper.cpp
Samples/PingEnclavePongOutside/Src/app/: CMakeLists.txt  Makefile  app.cpp  cmake_install.cmake  enclave_u.c  enclave_u.h
Samples/PingPong/: CMakeLists.txt  Makefile  cmake_install.cmake
Samples/PingPong/PGenerated/: PingPong.c  pingpong.4ml  pingpong.c
Samples/PingPong/Src/: tester.c
Samples/VotingSystem/: BallotBox.p  BulletinBoard.p  CMakeLists.txt  SecuredVoting.xml  SecuredVotingHeader.p  TabulationTeller.p  TamperEvidentLog.p  Testscript.p  VotingClient.p
Samples/VotingSystem/PGenerated/: SecuredVoting.4ml  SecuredVoting.c  SecuredVoting.h  linker.c  linker.h
Samples/VotingSystem/PSrc/: BallotBox.p  BulletinBoard.p  TabulationTeller.p  TamperEvidentLog.p  Testscript.p
Samples/VotingSystem/Src/: helperFunction.c  tester.c
(+266 files in other folders)
